--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -38,7 +38,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest tests.py --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+        python -m pytest tests/ --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v2
@@ -58,14 +58,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install sphinx
+
     - name: Document using sphinx
       run: |
         cd docs
         make html
+
     - name: Upload docs
       uses: actions/upload-artifact@v2
       with:
