--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,7 +1,7 @@
 # This workflows will upload a Python Package using Twine when a release is created
 # For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
 
-name: Test and Doc Python Package
+name: Test and Document Python Package
 
 on:
   push:
@@ -78,4 +78,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: sphinx-docs-${{ matrix.python-version }}
-        path: docs/
+        path: docs/build/
