--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -21,7 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.6.15, 3.7.17, 3.8.17, 3.9.17, 3.10.12, 3.11.4, 3.12.0-rc.1]
+        python-version: [3.7, 3.8, 3.9, 3.10, 3.11, 3.12.0-rc.1]
 
     steps:
     - uses: actions/checkout@v3
